# werkflowz

./: .gitmodules  README.md
ccmesh-server/: Cargo.toml  README.md
ccmesh-server/cb/: Cargo.toml
ccmesh-server/ccmesh/: Cargo.toml
ccmesh-server/config/: Cargo.toml  build.rs  cloud.json  cloud.json.old
ccmesh-server/scheduler/: Cargo.toml
ccmesh-server/scheduler/src/: utils.rs
ccmesh-server/server/: Cargo.toml
ccmesh-server/vis/: Cargo.toml
d/: manual_payloads.json
dummy/: dummy.go  go.mod  run.sh
flowerkz/: go.mod  go.sum
flowerkz/2branch/: compil.sh  func_config.json  nightcore_config.json  run_local.sh
flowerkz/dummy/: compil.sh  dummy  func_config.json  go.mod  run.sh
flowerkz/incrementor/: common.env  compil.sh  func_config.json  go.mod  incrementor.go  incrementorFinish.go  incrementorInit.go  nighcore_config.json  nightcore_config.json  run_distributed.py  run_local.sh
flowerkz/pingpong/: common.env  compil.sh  func_config.json  nightcore_config.json  run_local.sh
flowerkz/writerandreader/: common.env  compil.sh  func_config.json  init.go  nightcore_config.json  reader.go  run_local.sh  writer.go
incrementor/: func_config.json  go.mod  incrementor.go  incrementorFinish.go  incrementorInit.go  run.sh
scripts/: README.md  arch_script.sh  c2.sh  ccmesh_redis_build.sh  ccmesh_server_build.sh  ccmesh_server_run.sh  deploy_nodes.sh  generate_cloud_and_constants.py  redis_setup.sh  remote_exec.sh  run_engine.sh  run_gateway.sh  run_launcher.sh  upload_file.sh  upload_to_hosts.sh
snitch/: Cargo.toml
snitch/src/: main.rs
(+22 files in other folders)
